--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
     background-image: url(/assets/bg-image.jpg);
-    background-size: cover; /*cobre toda area visivel do site*/
+    background-size: cover; /*cobre toda area visivel do site*/    
 }
 
 #page {
@@ -20,7 +20,7 @@ body {
     padding: 24px;
     background-color: #F0E8C2;
     border-radius: 24px;
-    margin: 48px auto;
+    margin: 48px auto 28px;
 }
 
 img {
@@ -57,6 +57,17 @@ h1, h2 {
 
 ul {
     padding-left: 24px;
+} 
+
+footer {
+    color: #F0E8C2;
+    text-align: center;
+    padding-bottom: 48px;
 }
+
+footer img {
+    vertical-align: middle;
+}
+
 
 
